added matching page ui and changed base font

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
