--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'com.github.yuyakaido:CardStackView:v2.3.4'
 }
