--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.github.yuyakaido:CardStackView:v2.3.4'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
